--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
     }
   },
   "keywords": [],
@@ -50,8 +51,10 @@
     "@types/react-redux": "^7.1.33",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
+    "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
+    "css-loader": "^7.1.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -64,9 +67,12 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
+    "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.2",
     "storybook": "^8.1.11",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.2",
@@ -76,12 +82,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "tailwindcss": "^3.4.4"
+    "react-redux": "^9.1.2"
   },
   "config": {
     "commitizen": {
