--- a/package.json
+++ b/package.json
@@ -13,15 +13,6 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{css,scss}": [
-      "prettier --write"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
@@ -70,6 +61,7 @@
     "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.1.11",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
