--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
     "postcss-loader": "^8.1.1",
